--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@aws-amplify/ui-react": "^6.11.1",
     "@aws-amplify/ui-react-liveness": "^3.3.8",
     "aws-amplify": "^6.14.4",
+    "aws-sdk": "^2.1692.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
   },
