--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@aws-amplify/ui-react-liveness": "^3.3.8",
     "aws-amplify": "^6.14.4",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "react-icons": "^5.5.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
