--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
   "dependencies": {
     "@aws-amplify/ui-react": "^6.11.1",
     "@aws-amplify/ui-react-liveness": "^3.3.8",
+    "@ffmpeg/core": "^0.12.10",
+    "@ffmpeg/ffmpeg": "^0.12.15",
+    "@ffmpeg/util": "^0.12.2",
     "aws-amplify": "^6.14.4",
     "aws-sdk": "^2.1692.0",
     "react": "^19.1.0",
